[FIX] mass_mailing: vertical alignments & multiline text
* vertical alignment: Keep ‘vertical-align: top’ as default, but
define ‘middle’ exceptions for header and footer snippets.

* ‘comparison_table’: multiline text.
Remove inline style for inner <p/> elements and define default padding
for parent <td/> instead. This will allow to create multiple line of
text keeping a coherent margin between each <td/>.
A css set of rules triggering any kind of elements allow to use
multiline text for any kind of tag (p, h1, etc..)

* Footer snippets padding, minor

--- a/addons/mass_mailing/static/src/less/themes/theme_default.less
+++ b/addons/mass_mailing/static/src/less/themes/theme_default.less
@@ -141,6 +141,9 @@
             display: inline-block;
         }
     }
+    td {
+        vertical-align: middle;
+    }
 }
 
 .o_mail_block_header_text_social {
@@ -187,6 +190,18 @@
         height: 1px;
         background-color: darken(@o_mm_def_color_alpha, 15%);
     }
+    table table {
+        td, th {
+            vertical-align: middle;
+        }
+        td {
+            padding: 10px 20px;
+            * {
+                margin: 0;
+                line-height: 1.3;
+            }
+        }
+    }
 }
 
 .o_mail_block_discount2 {
@@ -202,6 +217,7 @@
     .o_mail_table_styles {
         border-top: 2px solid @o_mm_def_color_alpha;
         padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     .o_mail_footer_links {
@@ -240,6 +256,9 @@
                 font-size: 12px;
             }
         }
+    }
+    td {
+        vertical-align: middle;
     }
 }
 
